# cmake_tutorials

./: CMakeLists.txt  c_prog_lang_main.c
fahrenheit_table/: CMakeLists.txt  fahrenheit_table.c  fahrenheit_table.h
includes/: c_prog_lang_config.h.in
